--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -12,7 +12,7 @@
 
     <!-- Custom Styling -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <title>LogIn | Papel</title>
+    <title>SignUp | Papel</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
             <li>
                 <a href="../../index.html">Home</a>
             </li>
-            <li class="active">
+            <li>
                 <a href="../html/login.html">LogIn</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="../html/signup.html">SignUp</a>
             </li>
         </ul>
@@ -42,7 +42,21 @@
         <!-- auth-content -->
         <div class="auth-content">
             <form action="./account/home.html" method="post">
-                <h2 class="form-title">Login - Papel</h2>
+                <h2 class="form-title">SignUp - Papel</h2>
+                <div>
+                    <label for="fname">First Name</label>
+                    <input type="text" name="fname" class="text-input">
+                </div>
+
+                <div>
+                    <label for="lname">Last Name</label>
+                    <input type="text" name="lname" class="text-input">
+                </div>
+
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" class="text-input">
+                </div>
 
                 <div>
                     <label for="username">Username</label>
@@ -55,10 +69,15 @@
                 </div>
 
                 <div>
-                    <button type="submit" name="submit-button" class="btn btn-big btn-block">Login</button>
+                    <label for="passwordConf">Confirm Password</label>
+                    <input type="password" name="passwordConf" class="text-input">
                 </div>
 
-                <p>Not yet signed up? <a href="./signup.html">SignUp here.</a></p>
+                <div>
+                    <button type="submit" name="submit-button" class="btn btn-big btn-block">Sign Up</button>
+                </div>
+
+                <p>Already signed up? <a href="./login.html">Login here.</a></p>
 
             </form>
         </div>
@@ -69,8 +88,8 @@
 
         </div>
 
-        <div class="footer">
-            <p>&copy; Papel 2020 | Ndayisaba Sylver</p>
+        <div class="footer-bottom">
+            <p>&copy; Papel 2020 | Made by Ishimwe Ayman</p>
         </div>
     </div>
 
