--- a/UI/html/account/index.html
+++ b/UI/html/account/index.html
@@ -33,7 +33,7 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
-                    <li><a href="../index.html" class="logout">Logout</a></li>
+                    <li><a href="../../../index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -84,12 +84,12 @@
 
         </div>
 
-        <div class="footer-bottom">
-            <p>&copy; Papel 2020 | Made by Ishimwe Ayman</p>
+        <div class="footer">
+            <p>&copy; Papel 2020 | Ndayisaba Sylver</p>
         </div>
     </div>
 
-    <script type="text/javascript" src="../../js/scripts.js"></script>
+    <script type="text/javascript" src="../../js/script.js"></script>
 </body>
 
 </html>
