feat(account transaction history): created account transaction page - Created account transction ui for the user [Finishes #171091672]

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="./UI/html/login.html">LogIn</a>
             </li>
             <li>
-                <a href="./signup.html">SignUp</a>
+                <a href="./UI/html/signup.html">SignUp</a>
             </li>
         </ul>
     </header>
