--- a/UI/html/account/index.html
+++ b/UI/html/account/index.html
@@ -29,7 +29,7 @@
             <li>
                 <a href="#">
                     <i class="fa fa-user"></i>
-                    <span class="user-name">ANGE KAGAME</span>
+                    <span class="user-name">Uwase Aline</span>
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
