--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -41,7 +41,7 @@
     <div class="page-wrapper">
         <!-- auth-content -->
         <div class="auth-content">
-            <form action="../html/account/index.html" method="post">
+            <form action="../html/account/index.html" method="GET">
                 <h2 class="form-title">Login - Papel</h2>
 
                 <div>
