--- a/UI/html/account/index.html
+++ b/UI/html/account/index.html
@@ -25,7 +25,16 @@
         </div>
         <i class="fa fa-bars menu-toggle" onclick="menuToggler()"></i>
         <ul class="nav" id="nav">
-
+            <li>
+                <a href="#">
+                    <i class="fa fa-th"></i>
+                    <span class="user-name">More Options</span>
+                    <i class="fa fa-chevron-down"></i>
+                </a>
+                <ul id="dropdown-nav">
+                    <li><a href="../../../index.html" class="logout">Bank accounts</a></li>
+                </ul>
+            </li>
             <li>
                 <a href="#">
                     <i class="fa fa-user"></i>
