feat(ui for viewing all accounts: - I created ui for viewing all bank accounts as an admin/staff - This contains some options; for viewing a specific account and deleting a specific account [Finish #171172313]

--- a/UI/html/account/index.html
+++ b/UI/html/account/index.html
@@ -32,7 +32,7 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
-                    <li><a href="../../../index.html" class="logout">Bank accounts</a></li>
+                    <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
                 </ul>
             </li>
             <li>
