--- a/UI/html/account/create_account.html
+++ b/UI/html/account/create_account.html
@@ -25,11 +25,20 @@
         </div>
         <i class="fa fa-bars menu-toggle" onclick="menuToggler()"></i>
         <ul class="nav" id="nav">
-
+            <li>
+                <a href="#">
+                    <i class="fa fa-th"></i>
+                    <span class="user-name">More Options</span>
+                    <i class="fa fa-chevron-down"></i>
+                </a>
+                <ul id="dropdown-nav">
+                    <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                </ul>
+            </li>
             <li>
                 <a href="#">
                     <i class="fa fa-user"></i>
-                    <span class="user-name">ANGE KAGAME</span>
+                    <span class="user-name">Uwase Aline</span>
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
