--- a/UI/html/account/admin/view_account.html
+++ b/UI/html/account/admin/view_account.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
 
     <!-- Custom Styling -->
-    <link rel="stylesheet" type="text/css" href="../../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../../../css/styles.css">
     <title>Account | Papel</title>
 </head>
 
@@ -32,7 +32,7 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
-                    <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../bank_account.html" class="logout">Bank accounts</a></li>
                 </ul>
             </li>
             <li>
@@ -54,68 +54,80 @@
             <div class="account-title">
 
                 <h2>
-                    <a href="./index.html" class="btn btn-sm btn-block">Back</a> Bank Accounts
+                    <a href="../bank_account.html" class="btn btn-sm btn-block">Back</a> Bank Account #21221233
                 </h2>
             </div>
         </div>
         <hr>
+        <div class="account">
+            <p>
+                <b>Owner: </b> Uwase Aline
+            </p>
+            <p>
+                <b>Account Number: </b> 21221233
+            </p>
+            <p>
+                <b>Account Type: </b> Savings
+            </p>
+            <p>
+                <b>Status: </b> Active
+            </p>
+            <p>
+                <b>Balance: </b> 2,000 Rwf
+            </p>
+            <p>
+                <b>Created On: </b> 12/12/2007
+            </p>
+
+        </div>
+        <hr>
         <div class="transactions">
+            <h2>Recent transactions</h2>
             <div>
                 <table class="transactions-table">
                     <thead>
-                        <th>#</th>
-                        <th>Account NO</th>
-                        <th>Beneficiary</th>
+                        <th>SN</th>
+                        <th>Transaction ID</th>
                         <th>Type</th>
-                        <th>Created on</th>
-                        <th>Options</th>
+                        <th>Date</th>
+                        <th>Cashier</th>
+                        <th>Amount</th>
                     </thead>
                     <tbody>
                         <tr>
                             <td>1</td>
                             <td>29910</td>
-                            <td>Uwase Aline</td>
-                            <td>Current</td>
-                            <td>12-02-2017</td>
-                            <td>
-                                <a href="./admin/view_account.html">view</a> |
-                                <a href="#"> delete</a>
-                            </td>
+                            <td>Debit</td>
+                            <td>July 7, 2019</td>
+                            <td>Munyentwali Alli</td>
+                            <td>3,500</td>
                         </tr>
 
                         <tr>
                             <td>2</td>
                             <td>29340</td>
-                            <td>Ndayisaba Sylver</td>
-                            <td>Savings</td>
-                            <td>11-05-2018</td>
-                            <td>
-                                <a href="./admin/view_account.html">view</a> |
-                                <a href="#"> delete</a>
-                            </td>
+                            <td>Debit</td>
+                            <td>July 10, 2019</td>
+                            <td>Munyentwali Alli</td>
+                            <td>1,500</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
                             <td>35910</td>
-                            <td>Ivan Ndahiro</td>
-                            <td>Saving</td>
-                            <td>11-05-2018</td>
-                            <td>
-                                <a href="./admin/view_account.html">view</a> |
-                                <a href="#"> delete</a>
-                            </td>
+                            <td>Credit</td>
+                            <td>July 28, 2019</td>
+                            <td>Assina Erra</td>
+                            <td>50,500</td>
                         </tr>
 
                         <tr>
                             <td>4</td>
                             <td>35561</td>
-                            <td>Muhire Aimable</td>
-                            <td>Current</td>
-                            <td>11-05-2018</td>
-                            <td>
-                                <a href="./admin/view_account.html">view</a> |
-                                <a href="#"> delete</a></td>
+                            <td>Debit</td>
+                            <td>August 7, 2019</td>
+                            <td>Munyentwali Alli</td>
+                            <td>10,500</td>
                         </tr>
 
                     </tbody>
@@ -138,7 +150,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../../js/scripts.js"></script>
+    <script type="text/javascript" src="../../../js/script.js"></script>
 </body>
 
 </html>
