--- a/UI/html/account/create_account.html
+++ b/UI/html/account/create_account.html
@@ -42,6 +42,7 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
+                    <li><a href="../account/user/users.html" class="logout">Users</a></li>
                     <li><a href="../index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
