--- a/UI/html/account/user/users.html
+++ b/UI/html/account/user/users.html
@@ -55,7 +55,10 @@
             <div class="account-title">
 
                 <h2>
-                    Users
+                    <a href="./index.html" class="btn btn-sm">
+                        <i class="fa fa-user-plus" aria-hidden="true"></i> Add
+                        User</a>
+                    <span class="pull-right">Users</span>
                 </h2>
             </div>
         </div>
