feat(create_admin): create ui for creating admin/staff - This is a form for creating a new admin or staff [Finish #171208434]

--- a/UI/html/account/user/users.html
+++ b/UI/html/account/user/users.html
@@ -55,7 +55,7 @@
             <div class="account-title">
 
                 <h2>
-                    <a href="./index.html" class="btn btn-sm">
+                    <a href="./admin_form.html" class="btn btn-sm">
                         <i class="fa fa-user-plus" aria-hidden="true"></i> Add
                         User</a>
                     <span class="pull-right">Users</span>
