feat(form_change): minor changes on the form - Here I changed option and title [Finish #171208434]

--- a/UI/html/account/user/admin_form.html
+++ b/UI/html/account/user/admin_form.html
@@ -53,18 +53,16 @@
     <div class="page-wrapper">
         <div class="container-account">
             <div class="account-title">
-                <h1>Papel Account</h1>
+                <h3>Create Admin/ Staff</h3>
             </div>
         </div>
         <hr>
         <div class="create-account">
             <form action="#" method="post">
-                <h2 class="form-title">Create Admin/ Staff</h2>
-
                 <div>
                     <label for="role">Role</label>
                     <select name="type" class="text-input" id="role">
-                        <option selected disabled>Select Type</option>
+                        <option selected disabled>Select Role</option>
                         <option value="1">Admin</option>
                         <option value="2">Staff</option>
                     </select>
