--- a/UI/html/account/create_account.html
+++ b/UI/html/account/create_account.html
@@ -31,7 +31,7 @@
                     <span class="user-name">More Options</span>
                     <i class="fa fa-chevron-down"></i>
                 </a>
-                <ul id="dropdown-nav">
+                <ul id="dropdown-nav" class="dropdown-nav">
                     <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
                 </ul>
             </li>
@@ -41,7 +41,7 @@
                     <span class="user-name">Uwase Aline</span>
                     <i class="fa fa-chevron-down"></i>
                 </a>
-                <ul id="dropdown-nav">
+                <ul id="dropdown-nav" class="dropdown-nav">
                     <li><a href="../account/user/users.html" class="logout">Users</a></li>
                     <li><a href="../index.html" class="logout">Logout</a></li>
                 </ul>
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../../js/scripts.js"></script>
+    <script type="text/javascript" src="../../js/script.js"></script>
 </body>
 
 </html>
