chor(TTL Recomendation): text&button - created welcome text and button [Finish #171137031]

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <!-- font awesome -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.css">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
-
     <!-- Custom Styling -->
     <link rel="stylesheet" type="text/css" href="./UI/css/styles.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
     <title>Papel</title>
 </head>
 
@@ -42,16 +41,12 @@
     <!-- Page wrapper -->
     <div class="page-wrapper">
         <div class="home-img">
-            <!-- <img src="./images/1_8fXHTYBgOKdMh9g3ru9TiA.jpeg"> -->
-        </div>
-        <div class="container-home">
-            <div>
-                Convenient
+            <div class="landing-text">
+                Papel is a light-weight core banking application that powers banking operations like account creation,
+                customer deposits, and withdrawals. This app is meant to support a single bank, where users can signup
+                and create bank accounts online, but must visit the branch to withdraw or deposit money
             </div>
-            Secure
-            <div>
-                Simple
-            </div>
+            <a href="" class="home-button">Sign Up</a>
         </div>
     </div>
     <!-- footer -->
