feat(credit/debit): added credit/debit option: -I added the debit/credit option in more options(menu) [Finish #171215701 ]

--- a/UI/html/account/account.html
+++ b/UI/html/account/account.html
@@ -33,6 +33,7 @@
                 </a>
                 <ul id="dropdown-nav">
                     <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
@@ -55,7 +56,8 @@
             <div class="account-title">
 
                 <h2>
-                    <a href="./index.html" class="btn btn-sm btn-block">Back</a> Bank Account #21221233
+                    <a href="../casier/credit_debit.html" class="btn btn-sm btn-block">Debit/ Credit</a> Bank Account
+                    #21221233
                 </h2>
             </div>
         </div>
