--- a/UI/html/account/create_account.html
+++ b/UI/html/account/create_account.html
@@ -33,6 +33,7 @@
                 </a>
                 <ul id="dropdown-nav" class="dropdown-nav">
                     <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
@@ -43,7 +44,7 @@
                 </a>
                 <ul id="dropdown-nav" class="dropdown-nav">
                     <li><a href="../account/user/users.html" class="logout">Users</a></li>
-                    <li><a href="../index.html" class="logout">Logout</a></li>
+                    <li><a href="../../../index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -73,8 +74,6 @@
                 <div>
                     <button type="submit" name="submit-button" class="btn btn-big btn-block">Create</button>
                 </div>
-
-                <p><a href="./index.html">Cancel.</a></p>
 
             </form>
 
