--- a/UI/html/account/user/users.html
+++ b/UI/html/account/user/users.html
@@ -32,7 +32,8 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav">
-                    <li><a href="../../../../index.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
@@ -43,7 +44,7 @@
                 </a>
                 <ul id="dropdown-nav">
                     <li><a href="../user/users.html" class="logout">Users</a></li>
-                    <li><a href="../../../index.html" class="logout">Logout</a></li>
+                    <li><a href="../../../../index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -84,7 +85,7 @@
                             <td>User</td>
                             <td>Active</td>
                             <td>
-                                <a href="#">Desable</a>
+                                <a href="#">Disactivate</a>
                             </td>
                         </tr>
 
@@ -96,7 +97,7 @@
                             <td>Staff</td>
                             <td>Activated</td>
                             <td>
-                                <a href="#">Desable</a>
+                                <a href="#">Disactivate</a>
                             </td>
                         </tr>
 
@@ -106,7 +107,7 @@
                             <td>Aliane</td>
                             <td>ualine@gmail.com</td>
                             <td>User</td>
-                            <td>Desactivated</td>
+                            <td>Disactivate</td>
                             <td>
                                 <a href="#">Activate</a>
                             </td>
@@ -120,7 +121,7 @@
                             <td>Admin</td>
                             <td>Active</td>
                             <td>
-                                <a href="#">Desable</a>
+                                <a href="#">Disactivate</a>
                             </td>
                         </tr>
 
