--- a/UI/html/casier/credit_debit.html
+++ b/UI/html/casier/credit_debit.html
@@ -32,7 +32,8 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav" class="dropdown-nav">
-                    <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../account/bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
@@ -42,7 +43,8 @@
                     <i class="fa fa-chevron-down"></i>
                 </a>
                 <ul id="dropdown-nav" class="dropdown-nav">
-                    <li><a href="../index.html" class="logout">Logout</a></li>
+                    <li><a href="../account/user/users.html" class="logout">Users</a></li>
+                    <li><a href="../../../index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -57,7 +59,7 @@
         </div>
         <hr>
         <div class="create-account">
-            <form action="./home.html" method="post">
+            <form action="#" method="post">
                 <div>
                     <div>
                         <label for="secondName">Account No</label>
@@ -85,7 +87,10 @@
                     </div>
 
                 </div>
-                <p><a href="./cashier.html">Cancel.</a></p>
+                <div>
+                    <button href="#" class="btn btn-block btn-big">Submit</button>
+                </div>
+
 
             </form>
 
