--- a/UI/html/account/bank_account.html
+++ b/UI/html/account/bank_account.html
@@ -33,6 +33,7 @@
                 </a>
                 <ul id="dropdown-nav">
                     <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
@@ -55,7 +56,7 @@
             <div class="account-title">
 
                 <h2>
-                    <a href="./index.html" class="btn btn-sm btn-block">Back</a> Bank Accounts
+                    Bank Accounts
                 </h2>
             </div>
         </div>
