--- a/UI/html/casier/cashier.html
+++ b/UI/html/casier/cashier.html
@@ -33,6 +33,7 @@
                 </a>
                 <ul id="dropdown-nav">
                     <li><a href="./bank_account.html" class="logout">Bank accounts</a></li>
+                    <li><a href="../casier/credit_debit.html" class="logout">Debit/Credit</a></li>
                 </ul>
             </li>
             <li>
