chor(button color): - changed button color [Finish #171215701]

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 customer deposits, and withdrawals. This app is meant to support a single bank, where users can signup
                 and create bank accounts online, but must visit the branch to withdraw or deposit money
             </div>
-            <a href="" class="home-button">Sign Up</a>
+            <a href="./UI/html/signup.html" class="home-button">Sign Up</a>
         </div>
     </div>
     <!-- footer -->
